# prefect_history

./: README.md  main.py  pyproject.toml
prefect_history/: __init__.py  __main__.py  client.py  config.py  db.py  sync.py  web.py
prefect_history/templates/: index.html  rows.html  run_detail.html  summary.html
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_db.py  test_sync.py  test_web.py
