[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-history"
version = "0.2.0"
description = "Cache and browse Prefect flow-run history locally using SQLite."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "prefect>=3.7.5",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "isort",
    "pytest",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.27.0",
]
publish = [
    "build",
    "twine",
]

[project.scripts]
prefect-history = "prefect_history.__main__:main"

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
prefect_history = ["templates/*.html"]

